--- a/site/index.html
+++ b/site/index.html
@@ -223,8 +223,8 @@
         <div>
           <nav>
             <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
-              <a class="nav-item nav-link active" id="nav-Programming-tab" data-toggle="tab" href="#nav-Programming" role="tab"
-                aria-controls="nav-Programming" aria-selected="true">Programming Language</a>
+              <a class="nav-item nav-link active" id="nav-Programming-tab" data-toggle="tab" href="#nav-Programming"
+                role="tab" aria-controls="nav-Programming" aria-selected="true">Programming Language</a>
               <a class="nav-item nav-link" id="nav-ml-tab" data-toggle="tab" href="#nav-ml" role="tab"
                 aria-controls="nav-ml" aria-selected="false">Machine Learning</a>
               <a class="nav-item nav-link" id="nav-web-tab" data-toggle="tab" href="#nav-web" role="tab"
@@ -235,113 +235,241 @@
                 aria-controls="nav-other" aria-selected="false">Other</a>
             </div>
           </nav>
-          <div class="row">
-            <div class="col-sm-4"></div>
-            <div class="col-sm-4">
-              <div class="tab-content" id="nav-tabContent">
+          <div class="tab-content" id="nav-tabContent">
 
-                <div class="mt-3 tab-pane fade show active" id="nav-Programming" role="tabpanel" aria-labelledby="nav-Programming-tab">
+            <div class="mt-3 tab-pane fade show active" id="nav-Programming" role="tabpanel"
+              aria-labelledby="nav-Programming-tab">
+              <div class="row">
+                <div class="col-sm-5">
+                  <h6 class="float-right">75%</h6>
                   <h6>Python</h6>
                   <div class="progress">
-                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 75%"></div>
                   </div>
+                  <h6 class="float-right">65%</h6>
                   <h6>Java</h6>
                   <div class="progress">
-                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="65" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 65%"></div>
                   </div>
+                  <h6 class="float-right">80%</h6>
                   <h6>MySQL</h6>
                   <div class="progress">
-                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 80%"></div>
                   </div>
+                  <h6 class="float-right">55%</h6>
+                  <h6>Cisco</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="55" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 55%"></div>
+                  </div>
+                </div>
+
+                <div class="col-sm-2"></div>
+                <div class="col-sm-5">
+                  <h6 class="float-right">50%</h6>
                   <h6>Android</h6>
                   <div class="progress">
-                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 50%"></div>
                   </div>
+                  <h6 class="float-right">72%</h6>
                   <h6>C</h6>
                   <div class="progress">
-                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="72" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 72%"></div>
                   </div>
-                  <h6>Fluter</h6>
+                  <h6 class="float-right">40%</h6>
+                  <h6>Dart</h6>
                   <div class="progress">
-                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="40" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 40%"></div>
                   </div>
                 </div>
-                  
-                <div class="mt-3 tab-pane fade" id="nav-ml" role="tabpanel" aria-labelledby="nav-profile-tab">
+              </div>
+            </div>
+
+            <div class="mt-3 tab-pane fade" id="nav-ml" role="tabpanel" aria-labelledby="nav-profile-tab">
+              <div class="row">
+                <div class="col-sm-5">
+                  <h6 class="float-right">71%</h6>
+                  <h6>Tensorflow</h6>
                   <div class="progress">
-                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="71" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 71%"></div>
+                  </div>
+                  <h6 class="float-right">70%</h6>
+                  <h6>Keras</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 70%"></div>
+                  </div>
+                  <h6 class="float-right">74%</h6>
+                  <h6>Neural Network</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="74" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 74%"></div>
                   </div>
                 </div>
 
-                <div class="mt-3 tab-pane fade" id="nav-web" role="tabpanel" aria-labelledby="nav-web-tab">
+                <div class="col-sm-2"></div>
+                <div class="col-sm-5">
+                  <h6 class="float-right">60%</h6>
+                  <h6>Data Science</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 60%"></div>
+                  </div>
+                  <h6 class="float-right">76%</h6>
+                  <h6>Image Processing</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="76" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 76%"></div>
+                  </div>
+                  <h6 class="float-right">78%</h6>
+                  <h6>Watson Studio</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="78" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 78%"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="mt-3 tab-pane fade" id="nav-web" role="tabpanel" aria-labelledby="nav-web-tab">
+              <div class="row">
+                <div class="col-sm-5">
+                  <h6 class="float-right">85%</h6>
                   <h6>HTML 5</h6>
                   <div class="progress">
-                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 85%"></div>
                   </div>
+                  <h6 class="float-right">80%</h6>
                   <h6>CSS</h6>
                   <div class="progress">
-                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    <div class="progress-bar " id="bg" role="prograaaaaaessbar" aria-valuenow="80" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 80%"></div>
                   </div>
+                  <h6 class="float-right">80%</h6>
                   <h6>Bootstrap 4</h6>
                   <div class="progress">
-                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 80%"></div>
                   </div>
-                  <h6>Jquery</h6>
-                  <div class="progress">
-                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                  </div>
+                </div>
+
+                <div class="col-sm-2"></div>
+                <div class="col-sm-5">
+                  <h6 class="float-right">60%</h6>
                   <h6>PhP</h6>
                   <div class="progress">
-                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 60%"></div>
                   </div>
+                  <h6 class="float-right">50%</h6>
                   <h6>Javascript</h6>
                   <div class="progress">
-                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 50%"></div>
+                  </div>
+                  <h6 class="float-right">68%</h6>
+                  <h6>Jquery</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="68" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 68%"></div>
                   </div>
                 </div>
+              </div>
+            </div>
 
-                <div class="mt-3 tab-pane fade" id="nav-uiux" role="tabpanel" aria-labelledby="nav-uiux-tab">
+            <div class="mt-3 tab-pane fade" id="nav-uiux" role="tabpanel" aria-labelledby="nav-uiux-tab">
+              <div class="row">
+                <div class="col-sm-5">
+                  <h6 class="float-right">85%</h6>
                   <h6>Adobe XD</h6>
                   <div class="progress">
-                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 85%"></div>
                   </div>
+                  <h6 class="float-right">80%</h6>
                   <h6>Figma</h6>
                   <div class="progress">
-                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 80%"></div>
                   </div>
+                  <h6 class="float-right">90%</h6>
                   <h6>Prototype</h6>
                   <div class="progress">
-                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 90%"></div>
                   </div>
+                </div>
+
+                <div class="col-sm-2"></div>
+                <div class="col-sm-5">
+                  <h6 class="float-right">73%</h6>
                   <h6>Marvel</h6>
                   <div class="progress">
-                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="73" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 73%"></div>
                   </div>
+                  <h6 class="float-right">60%</h6>
                   <h6>Sketch</h6>
                   <div class="progress">
-                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 60%"></div>
                   </div>
                 </div>
+              </div>
+            </div>
 
-                <div class="mt-3 tab-pane fade" id="nav-other" role="tabpanel" aria-labelledby="nav-other-tab">
+            <div class="mt-3 tab-pane fade" id="nav-other" role="tabpanel" aria-labelledby="nav-other-tab">
+              <div class="row">
+                <div class="col-sm-5">
+                  <h6 class="float-right">70%</h6>
                   <h6>Word</h6>
                   <div class="progress">
-                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 70%"></div>
                   </div>
+                  <h6 class="float-right">75%</h6>
                   <h6>Excel</h6>
                   <div class="progress">
-                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 75%"></div>
                   </div>
+                  <h6 class="float-right">78%</h6>
                   <h6>Powerpoint</h6>
                   <div class="progress">
-                      <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                  </div>
-                  <h6>Git</h6>
-                  <div class="progress">
-                      <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="78" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 78%"></div>
                   </div>
                 </div>
 
+                <div class="col-sm-2"></div>
+                <div class="col-sm-5">
+                  <h6 class="float-right">80%</h6>
+                  <h6>Git</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 80%"></div>
+                  </div>
+                  <h6 class="float-right">50%</h6>
+                  <h6>Video Editing</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 50%"></div>
+                  </div>
+                  <h6 class="float-right">60%</h6>
+                  <h6>Linux</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                      aria-valuemax="100" style="width: 60%"></div>
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -352,28 +480,28 @@
   <!-- ---------------------Professional Skills----------------- -->
   <section class="prof-skills">
     <div class="container">
-      <h3>Professional Skills</h3>
+      <h3 class="pt-5">Professional Skills</h3>
       <div class="row">
         <div class="col-sm-3">
-          <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
+          <div class="round mt-4" data-value=".95" data-size="100" data-thickness="6">
             <strong></strong>
             <span>Communication</span>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
+          <div class="round mt-4" data-value=".76" data-size="100" data-thickness="6">
             <strong></strong>
             <span>Team Work</span>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
+          <div class="round mt-4" data-value=".60" data-size="100" data-thickness="6">
             <strong></strong>
             <span>Creativity</span>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
+          <div class="round mt-4" data-value=".85" data-size="100" data-thickness="6">
             <strong></strong>
             <span>Project Management</span>
           </div>
