--- a/site/index.html
+++ b/site/index.html
@@ -511,8 +511,83 @@
   </section>
 
   <!--------------Experience--------------------------->
-  <section>
+  <section class="experience">
+    <div class="container">
 
+      <div class="row">
+
+        <div class="col-sm-6">
+          <h2 class="pb-3">Education</h2>
+
+          <div class="card border-0" style="width: 100%;">
+            <div class="card-body rounded">
+              <h4 class="card-title" id ="card-title">M.Sc. In Computer Science and Engineering</h4>
+              <a href="https://www.juniv.edu"><h5 class="font-italic card-subtitle mb-2">Jahangirnagar University</h5></a>
+              <p class="card-text">2020-Present</p>
+              <p>Jahangirnagar University has been running its M.Sc. in Computer Science and Engineering program very successfully since its inception and has attracted not only fresh undergraduates but also a handful number of ICT professionals from the industry. </p>
+            </div>
+          </div>
+
+          <div class="card border-0 mt-4" style="width: 100%;">
+            <div class="card-body rounded">
+              <h4 class="card-title" id ="card-title">B.Sc. In Computer Science and Engineering</h4>
+              <a  href="http://daffodilvarsity.edu.bd/"><h5 class="font-italic card-subtitle mb-2">Daffodil International University</h5></a>
+              <p class="card-text">2015-2019</p>
+              <p>The B.Sc. in Computer Science & Engineering (CSE) program is designed to produce skilled graduates in the field to satisfy the growing demands of computer engineer graduates at home and abroad. It provides the students an opportunity to obtain broad knowledge of Computer Science, Computer Engineering and Information Technology with some freedom to tailor the program according to the students’ individual needs. </p>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="col-sm-6">
+          <h2>Experience</h2>
+
+          <div class="card border-0 mt-4" style="width: 100%;">
+            <div class="card-body rounded">
+              <h4 class="card-title" id ="card-title">Ui/Ux Design & Web Developer</h4>
+              <a  href="https://www.fiverr.com/hasibulhasan442"><h5 class="font-italic card-subtitle mb-2">Fiverr</h5></a>
+              <p class="card-text">2019-Present</p>
+              <p style="font-size:15px;">Responsibility :</p>
+              <ul style="font-size:13px;">
+                <li>Design Landing Page, Dashboard or Admin Penal, Mobile Application Ui</li>
+                <li>Make Prototype</li>
+                <li>Develope Static & Dynamic Web Site</li>
+                <li>Html, Css, Php, Jquery, Bootstrap, Database, Javascript</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="card border-0 mt-4" style="width: 100%;">
+            <div class="card-body rounded">
+              <h4 class="card-title" id ="card-title">Video Editor</h4>
+              <a  href="https://www.fiverr.com/hasibulhasan442"><h5 class="font-italic card-subtitle mb-2">Top 10 Squad(Youtube Channel) </h5></a>
+              <p class="card-text">2018-2019</p>
+              <p style="font-size:15px;">Responsibility :</p>
+              <ul style="font-size:13px;">
+                <li>Video Editing & Upload</li>
+                <li>SEO</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="card border-0 mt-4" style="width: 100%;">
+            <div class="card-body rounded">
+              <h4 class="card-title" id ="card-title">Contributor (Local Guide Level-6)</h4>
+              <a  href="https://www.google.com.bd/maps/contrib/104268939853146374285/contribute/"><h5 class="font-italic card-subtitle mb-2">Google Map</h5></a>
+              <p class="card-text">2017-Present</p>
+              <p style="font-size:15px;">Responsibility :</p>
+              <ul style="font-size:13px;">
+                <li>Add Image in Google Map</li>
+                <li>Add Missing Place</li>
+              </ul>
+            </div>
+          </div>
+
+
+        </div>
+
+      </div>
+    </div>
   </section>
 
   <script src="js/circle.js"></script>
