--- a/site/index.html
+++ b/site/index.html
@@ -143,75 +143,10 @@
     </div>
   </section>
 
-  <!-- certificate-->
-  <section id="Course">
-    <div class="container-md-12">
-      <h1>COURSES</h1>
-      <div class="swiper-container">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div class="Course-img">
-              <img src="img/C1.jpg" />
-              <div class="Course-details">
-                <h6>Academy : Cisco Networking Academy</h6>
-                <h5>Course Name : Introduction to Cybersecurity</h5>
-              </div>
-            </div>
-          </div>
+<!---------------About me------------------------------------>
+  <section class="aboutme">
+    <div class="container">
 
-          <div class="swiper-slide">
-            <div class="Course-img">
-              <img src="img/C2.jpg" />
-              <div class="Course-details">
-                <h6>Academy : a2i</h6>
-                <h5>Course Name : Corona Virus Disease (COVID-19)</h5>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide">
-            <div class="Course-img">
-              <img src="img/C2.jpg" />
-              <div class="Course-details">
-                <h6>Academy : a2i</h6>
-                <h5>Course Name : Corona Virus Disease (COVID-19)</h5>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide">
-            <div class="Course-img">
-              <img src="img/C3.jpg" />
-              <div class="Course-details">
-                <h6>Academy : IBM, Coursera.org</h6>
-                <h5>Course Name : Data Science Methology</h5>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide">
-            <div class="Course-img">
-              <img src="img/C4.jpg" />
-              <div class="Course-details">
-                <h6>Academy : IBM, Coursera.org</h6>
-                <h5>What Is Data Science</h5>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide">
-            <div class="Course-img">
-              <img src="img/C5.jpg" />
-              <div class="Course-details">
-                <h6>Academy : IBM, Coursera.org</h6>
-                <h5>Course Name : Tools For Data Science</h5>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
-      </div>
     </div>
   </section>
 
@@ -510,85 +445,158 @@
     </div>
   </section>
 
-  <!--------------Experience--------------------------->
-  <section class="experience">
-    <div class="container">
+<!--------------Experience--------------------------->
+<section class="experience">
+  <div class="container">
 
-      <div class="row">
+    <div class="row">
 
-        <div class="col-sm-6">
-          <h2 class="pb-3">Education</h2>
+      <div class="col-sm-6">
+        <h2 class="pb-3">Education</h2>
 
-          <div class="card border-0" style="width: 100%;">
-            <div class="card-body rounded">
-              <h4 class="card-title" id ="card-title">M.Sc. In Computer Science and Engineering</h4>
-              <a href="https://www.juniv.edu"><h5 class="font-italic card-subtitle mb-2">Jahangirnagar University</h5></a>
-              <p class="card-text">2020-Present</p>
-              <p>Jahangirnagar University has been running its M.Sc. in Computer Science and Engineering program very successfully since its inception and has attracted not only fresh undergraduates but also a handful number of ICT professionals from the industry. </p>
-            </div>
+        <div class="card border-0" style="width: 100%;">
+          <div class="card-body rounded">
+            <h4 class="card-title" id ="card-title">M.Sc. In Computer Science and Engineering</h4>
+            <a href="https://www.juniv.edu"><h5 class="font-italic card-subtitle mb-2">Jahangirnagar University</h5></a>
+            <p class="card-text">2020-Present</p>
+            <p>Jahangirnagar University has been running its M.Sc. in Computer Science and Engineering program very successfully since its inception and has attracted not only fresh undergraduates but also a handful number of ICT professionals from the industry. </p>
           </div>
-
-          <div class="card border-0 mt-4" style="width: 100%;">
-            <div class="card-body rounded">
-              <h4 class="card-title" id ="card-title">B.Sc. In Computer Science and Engineering</h4>
-              <a  href="http://daffodilvarsity.edu.bd/"><h5 class="font-italic card-subtitle mb-2">Daffodil International University</h5></a>
-              <p class="card-text">2015-2019</p>
-              <p>The B.Sc. in Computer Science & Engineering (CSE) program is designed to produce skilled graduates in the field to satisfy the growing demands of computer engineer graduates at home and abroad. It provides the students an opportunity to obtain broad knowledge of Computer Science, Computer Engineering and Information Technology with some freedom to tailor the program according to the students’ individual needs. </p>
-            </div>
-          </div>
-
         </div>
 
-        <div class="col-sm-6">
-          <h2>Experience</h2>
-
-          <div class="card border-0 mt-4" style="width: 100%;">
-            <div class="card-body rounded">
-              <h4 class="card-title" id ="card-title">Ui/Ux Design & Web Developer</h4>
-              <a  href="https://www.fiverr.com/hasibulhasan442"><h5 class="font-italic card-subtitle mb-2">Fiverr</h5></a>
-              <p class="card-text">2019-Present</p>
-              <p style="font-size:15px;">Responsibility :</p>
-              <ul style="font-size:13px;">
-                <li>Design Landing Page, Dashboard or Admin Penal, Mobile Application Ui</li>
-                <li>Make Prototype</li>
-                <li>Develope Static & Dynamic Web Site</li>
-                <li>Html, Css, Php, Jquery, Bootstrap, Database, Javascript</li>
-              </ul>
-            </div>
+        <div class="card border-0 mt-4" style="width: 100%;">
+          <div class="card-body rounded">
+            <h4 class="card-title" id ="card-title">B.Sc. In Computer Science and Engineering</h4>
+            <a  href="http://daffodilvarsity.edu.bd/"><h5 class="font-italic card-subtitle mb-2">Daffodil International University</h5></a>
+            <p class="card-text">2015-2019</p>
+            <p>The B.Sc. in Computer Science & Engineering (CSE) program is designed to produce skilled graduates in the field to satisfy the growing demands of computer engineer graduates at home and abroad. It provides the students an opportunity to obtain broad knowledge of Computer Science, Computer Engineering and Information Technology with some freedom to tailor the program according to the students’ individual needs. </p>
           </div>
-
-          <div class="card border-0 mt-4" style="width: 100%;">
-            <div class="card-body rounded">
-              <h4 class="card-title" id ="card-title">Video Editor</h4>
-              <a  href="https://www.fiverr.com/hasibulhasan442"><h5 class="font-italic card-subtitle mb-2">Top 10 Squad(Youtube Channel) </h5></a>
-              <p class="card-text">2018-2019</p>
-              <p style="font-size:15px;">Responsibility :</p>
-              <ul style="font-size:13px;">
-                <li>Video Editing & Upload</li>
-                <li>SEO</li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="card border-0 mt-4" style="width: 100%;">
-            <div class="card-body rounded">
-              <h4 class="card-title" id ="card-title">Contributor (Local Guide Level-6)</h4>
-              <a  href="https://www.google.com.bd/maps/contrib/104268939853146374285/contribute/"><h5 class="font-italic card-subtitle mb-2">Google Map</h5></a>
-              <p class="card-text">2017-Present</p>
-              <p style="font-size:15px;">Responsibility :</p>
-              <ul style="font-size:13px;">
-                <li>Add Image in Google Map</li>
-                <li>Add Missing Place</li>
-              </ul>
-            </div>
-          </div>
-
-
         </div>
 
       </div>
+
+      <div class="col-sm-6">
+        <h2>Experience</h2>
+
+        <div class="card border-0 mt-4" style="width: 100%;">
+          <div class="card-body rounded">
+            <h4 class="card-title" id ="card-title">Ui/Ux Design & Web Developer</h4>
+            <a  href="https://www.fiverr.com/hasibulhasan442"><h5 class="font-italic card-subtitle mb-2">Fiverr</h5></a>
+            <p class="card-text">2019-Present</p>
+            <p style="font-size:15px;">Responsibility :</p>
+            <ul style="font-size:13px;">
+              <li>Design Landing Page, Dashboard or Admin Penal, Mobile Application Ui</li>
+              <li>Make Prototype</li>
+              <li>Develope Static & Dynamic Web Site</li>
+              <li>Html, Css, Php, Jquery, Bootstrap, Database, Javascript</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="card border-0 mt-4" style="width: 100%;">
+          <div class="card-body rounded">
+            <h4 class="card-title" id ="card-title">Video Editor</h4>
+            <a  href="https://www.fiverr.com/hasibulhasan442"><h5 class="font-italic card-subtitle mb-2">Top 10 Squad(Youtube Channel) </h5></a>
+            <p class="card-text">2018-2019</p>
+            <p style="font-size:15px;">Responsibility :</p>
+            <ul style="font-size:13px;">
+              <li>Video Editing & Upload</li>
+              <li>SEO</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="card border-0 mt-4" style="width: 100%;">
+          <div class="card-body rounded">
+            <h4 class="card-title" id ="card-title">Contributor (Local Guide Level-6)</h4>
+            <a  href="https://www.google.com.bd/maps/contrib/104268939853146374285/contribute/"><h5 class="font-italic card-subtitle mb-2">Google Map</h5></a>
+            <p class="card-text">2017-Present</p>
+            <p style="font-size:15px;">Responsibility :</p>
+            <ul style="font-size:13px;">
+              <li>Add Image in Google Map</li>
+              <li>Add Missing Place</li>
+            </ul>
+          </div>
+        </div>
+
+
+      </div>
+
+    </div>
+  </div>
+</section>
+  <!-- certificate-->
+  <section id="Course">
+    <div class="container-md-12">
+      <h1>COURSES</h1>
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="Course-img">
+              <img src="img/C1.jpg" />
+              <div class="Course-details">
+                <h6>Academy : Cisco Networking Academy</h6>
+                <h5>Course Name : Introduction to Cybersecurity</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="Course-img">
+              <img src="img/C2.jpg" />
+              <div class="Course-details">
+                <h6>Academy : a2i</h6>
+                <h5>Course Name : Corona Virus Disease (COVID-19)</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="Course-img">
+              <img src="img/C2.jpg" />
+              <div class="Course-details">
+                <h6>Academy : a2i</h6>
+                <h5>Course Name : Corona Virus Disease (COVID-19)</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="Course-img">
+              <img src="img/C3.jpg" />
+              <div class="Course-details">
+                <h6>Academy : IBM, Coursera.org</h6>
+                <h5>Course Name : Data Science Methology</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="Course-img">
+              <img src="img/C4.jpg" />
+              <div class="Course-details">
+                <h6>Academy : IBM, Coursera.org</h6>
+                <h5>What Is Data Science</h5>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <div class="Course-img">
+              <img src="img/C5.jpg" />
+              <div class="Course-details">
+                <h6>Academy : IBM, Coursera.org</h6>
+                <h5>Course Name : Tools For Data Science</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+      </div>
     </div>
   </section>
+
+  
 
   <script src="js/circle.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
