--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,8 @@
   <meta name="description" content="My Web Page" />
   <meta name="author" content="Mohammad Hasibul Hasan" />
   <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type" />
+  <meta name="format-detection" content="telephone=no">
+
   <title>Mohammad Hasibul Hasan</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
@@ -101,9 +103,15 @@
               <i id="contact-icon" class="fas fa-envelope"></i>&nbsp;&nbsp;hasibulhasan442&#64;gmail&#46;com
             </p>
           </div>
+          
           <div id="phone" class="ml-5">
             <p>
-              <i id="contact-icon" class="fas fa-mobile-alt"></i>&nbsp;&nbsp;&#40;&#43;880&#41;1770489990
+              <i id="contact-icon" class="fas fa-mobile-alt"></i><a href="tel:+8801770489990">&nbsp;&nbsp;&#40;&#43;880&#41;1770489990</a>
+            </p>
+          </div>
+          <div id="skype" class="ml-5">
+            <p>
+              <i id="contact-icon" class="fab fa-skype"></i>&nbsp;&nbsp;hasibul.hasan21
             </p>
           </div>
           <div id="location" class="ml-5">
@@ -144,11 +152,55 @@
   </section>
 
 <!---------------About me------------------------------------>
-  <section class="aboutme">
+  <section class="aboutme pt-5">
     <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <img class="w-100 h-100" src="img/a1.png" alt="">
+        </div>
 
+        <div class="col-sm-6 ">
+          <h2 class="pt-5">About Me</h2>
+          <p class="pt-3 hello">Hi I am <span>Hasibul Hasan</span>. Nice to Meet You</p>
+          <p class="aboutme-pera">I am a Computer Engineer and I am graduated from <a href="#">Daffodil International University</a>. Now I am doing my master's degree in Computer Science and Engineering at <a href="#">Jahangirnagar University</a>. Since beginning my journey start as a freelance designer. Now I also work as Web Developer & Image Processing. My thesis Paper also based on Image Processing. I am a decent timekeeper, always willing to find out new skills. Also I am good at </p>
+          <ul>
+            <li>MySql</li>
+            <li>Postgresql</li>
+            <li>Image Processing</li>
+            <li>Data Science</li>
+            <li>Flask</li>
+            <li>IBM Watson Studio</li>
+            <li>Html5</li>
+            <li>Css</li>
+            <li>Javascript</li>
+            <li>PhP</li>
+            <li>Jquery</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </section>
+ 
+
+  <!------------Service-------------------->
+<section class="services">
+  <h1>Services</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <i class="fas fa-palette"></i>
+      </div>
+
+      <div class="col-sm-4">
+        <i class="fas fa-layer-group"></i>
+      </div>
+
+      <div class="col-sm-4">
+        <i class="fas fa-code"></i>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- ---------------------Technical Skills----------------- -->
   <section class="tech-skills">
@@ -527,7 +579,7 @@
   <!-- certificate-->
   <section id="Course">
     <div class="container-md-12">
-      <h1>COURSES</h1>
+      <h1>Courses</h1>
       <div class="swiper-container">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
