--- a/site/index.html
+++ b/site/index.html
@@ -100,7 +100,7 @@
           <br>
           <div id="mail" class="ml-5">
             <p>
-              <i id="contact-icon" class="fas fa-envelope"></i>&nbsp;&nbsp;hasibulhasan442&#64;gmail&#46;com
+              <i id="contact-icon" class="fas fa-envelope"></i><a href="mailto:hasibulhasan442@gmail.com">&nbsp;&nbsp;hasibulhasan442&#64;gmail&#46;com</a>
             </p>
           </div>
           
@@ -111,7 +111,7 @@
           </div>
           <div id="skype" class="ml-5">
             <p>
-              <i id="contact-icon" class="fab fa-skype"></i>&nbsp;&nbsp;hasibul.hasan21
+              <i id="contact-icon" class="fab fa-skype"></i><a href="skype:hasibul.hasan21">&nbsp;&nbsp;hasibul.hasan21</a>
             </p>
           </div>
           <div id="location" class="ml-5">
