--- a/site/index.html
+++ b/site/index.html
@@ -62,9 +62,6 @@
             <a class="nav-link " href="#">PROJECT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">PRICING</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link " href="#">REVIEW</a>
           </li>
           <li class="nav-item">
@@ -182,21 +179,92 @@
   </section>
  
 
-  <!------------Service-------------------->
-<section class="services">
+<!------------Service-------------------->
+<section class="services pt-3 pb-3">
   <h1>Services</h1>
-  <div class="container">
+  <div class="container pt-3">
     <div class="row">
       <div class="col-sm-4">
-        <i class="fas fa-palette"></i>
+
+        <div class="card border-0 " style="width: 100%;">
+          <div class="card-body rounded ">
+            <div class="text-center"><i class="fas fa-palette fa-2x"></i></div>
+            <h3 class="card-title pt-2 text-center" id ="card-title">Ui/Ux Designer</h3></>
+            <p>Role</p>
+            <ul class="roles">
+              <li>Design Landing Page</li>
+              <li>Dashboard Design</li>
+              <li>Design Admin Panel</li>
+            </ul>
+            <p>Tools</p>
+            <ul class="tools">
+              <li>Adove XD</li>
+              <li>Figma</li>
+              <li>Marvel</li>
+              <li>Sketch</li>
+            </ul>
+          </div>
+          <a class="btn btn-sm h-25 w-25 mb-2 mx-auto" href="https://www.fiverr.com/hasibulhasan442" role="button" target="_blank">See More</a>
+        </div>
       </div>
 
       <div class="col-sm-4">
-        <i class="fas fa-layer-group"></i>
+        
+        <div class="card border-0" style="width: 100%;">
+          <div class="card-body rounded">
+            <div class="text-center"><i class="fas fa-layer-group fa-2x"></i></div>
+            <h3 class="card-title text-center pt-2" id ="card-title">Web Developer</h3></>
+            <p>Role</p>
+            <ul class="roles">
+              <li>Developed Web Page</li>
+              <li>Make Web page Responsive</li>
+              <li>Covert PSD/XD to HTML</li>
+              <li>Static & Dynamic Website Developed</li>
+            </ul>
+            <p>Tools</p>
+            <ul class="tools">
+              <li>VS Code</li>
+              <li>MySQL/PostgreSQL</li>
+              <li>PhP</li>
+              <li>Jquery</li>
+              <li>Javascript</li>
+              <li>Bootstrap/SASS</li>
+              <li>Github/Bitbucket</li>
+              <li>Cpanel</li>
+            </ul>
+          </div>
+          <a class="btn btn-sm h-25 w-25 mb-2 mx-auto" href="https://www.fiverr.com/hasibulhasan442" role="button" target="_blank">See More</a>
+        </div>
       </div>
 
       <div class="col-sm-4">
-        <i class="fas fa-code"></i>
+        <div class="card border-0" style="width: 100%;">
+          <div class="card-body rounded">
+            <div class="text-center"><i class="fas fa-code fa-2x"></i></div>
+            <h3 class="card-title pt-2 text-center" id ="card-title">Deep Learning</h3></>
+            <p>Role</p>
+            <ul class="roles">
+              <li>Train Dataset</li>
+              <li>Deploy Train Data in Web platform</li>
+              <li>Design Neural Network</li>
+            </ul>
+            <p>Tools</p>
+            <ul class="tools">
+              <li>Jupyter Notebook</li>
+              <li>Anaconda</li>
+              <li>Spyder</li>
+              <li>Python3</li>
+              <li>Tensorflow</li>
+              <li>Faster R-CNN</li>
+              <li>Custom CNN</li>
+              <li>Keras</li>
+              <li>ResNet50</li>
+              <li>Vgg16/Vgg19</li>
+              <li>Inception V3</li>
+            </ul>
+          </div>
+          <a class="btn btn-sm h-25 w-25 mb-2 mx-auto" href="https://www.fiverr.com/hasibulhasan442" role="button" target="_blank">See More</a>
+        </div>
       </div>
     </div>
   </div>
@@ -648,6 +716,12 @@
     </div>
   </section>
 
+  <footer class="footer pt-5">
+    <div class="container">
+      <p class="text-center">&copy; All rights reserved by Mohammad Hasibul Hasan</p>
+    </div>
+    
+  </footer>
   
 
   <script src="js/circle.js"></script>
