--- a/site/index.html
+++ b/site/index.html
@@ -42,25 +42,28 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">HOME</a>
+            <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">ABOUT</a>
+            <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">SKILL</a>
+            <a class="nav-link" href="#">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">EXPERIENCES</a>
+            <a class="nav-link" href="#">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">PROJECT</a>
+            <a class="nav-link " href="#">Experiences</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">REVIEW</a>
+            <a class="nav-link " href="#">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">CONTACT</a>
+            <a class="nav-link " href="#">Reviews</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="#">Contact</a>
           </li>
         </ul>
       </div>
@@ -151,11 +154,11 @@
           <img data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" class="w-100 h-100" src="img/a1.png" alt="">
         </div>
 
-        <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="500" class="col-sm-6">
-          <h2 class="pt-5">About Me</h2>
-          <p class="pt-3 hello">Hi I am <span>Hasibul Hasan</span>. Nice to Meet You</p>
-          <p class="aboutme-pera">I am a Computer Engineer and I am graduated from <a href="#">Daffodil International University</a>. Now I am doing my master's degree in Computer Science and Engineering at <a href="#">Jahangirnagar University</a>. Since beginning my journey start as a freelance designer. Now I also work as Web Developer & Image Processing. My thesis Paper also based on Image Processing. I am a decent timekeeper, always willing to find out new skills. Also I am good at </p>
-          <ul>
+        <div  class="col-sm-6">
+          <h2 class="pt-5" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="100">About Me</h2>
+          <p class="pt-3 hello"data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="150">Hi I am <span>Hasibul Hasan</span>. Nice to Meet You</p>
+          <p class="aboutme-pera" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="200">I am a Computer Engineer and I am graduated from <a href="#">Daffodil International University</a>. Now I am doing my master's degree in Computer Science and Engineering at <a href="#">Jahangirnagar University</a>. Since beginning my journey start as a freelance designer. Now I also work as Web Developer & Image Processing. My thesis Paper also based on Image Processing. I am a decent timekeeper, always willing to find out new skills. Also I am good at </p>
+          <ul data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="250">
             <li>MySql</li>
             <li>Postgresql</li>
             <li>Image Processing</li>
@@ -176,10 +179,10 @@
 
 <!------------Service-------------------->
 <section class="services pt-3 pb-3">
-  <h1>Services</h1>
+  <h1 data-aos="fade-up" data-aos-easing="linear" data-aos-duration="300">Services</h1>
   <div class="container pt-3">
     <div class="row">
-      <div class="col-sm-4 mt-3" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
+      <div class="col-sm-4 mt-3" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="200">
 
         <div class="card border-0 " style="width: 100%;">
           <div class="card-body rounded ">
@@ -232,7 +235,7 @@
         </div>
       </div>
 
-      <div class="col-sm-4 mt-3" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="600">
+      <div class="col-sm-4 mt-3" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="400">
         <div class="card border-0" style="width: 100%;">
           <div class="card-body rounded">
             <div class="text-center"><i class="fas fa-code fa-2x"></i></div>
@@ -268,11 +271,11 @@
   <!-- ---------------------Technical Skills----------------- -->
   <section class="tech-skills">
     <div class="container pt-4">
-      <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-        <h3>Technical Skills</h3>
+      <div>
+        <h3 data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">Technical Skills</h3>
         <div>
-          <nav>
-            <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
+          <nav data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="200">
+            <div class="nav justify-content-center" id="nav-tab" role="tablist">
               <a class="nav-item nav-link active" id="nav-Programming-tab" data-toggle="tab" href="#nav-Programming"
                 role="tab" aria-controls="nav-Programming" aria-selected="true">Programming Language</a>
               <a class="nav-item nav-link" id="nav-ml-tab" data-toggle="tab" href="#nav-ml" role="tab"
@@ -285,10 +288,9 @@
                 aria-controls="nav-other" aria-selected="false">Other</a>
             </div>
           </nav>
-          <div class="tab-content" id="nav-tabContent">
-
-            <div class="mt-3 tab-pane fade show active" id="nav-Programming" role="tabpanel"
-              aria-labelledby="nav-Programming-tab">
+          <div class="tab-content" id="nav-tabContent" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500" data-aos-delay="300">
+            
+            <div class="mt-3 tab-pane fade show active" id="nav-Programming" role="tabpanel" aria-labelledby="nav-Programming-tab" >
               <div class="row">
                 <div class="col-sm-5">
                   <h6 class="float-right">75%</h6>
@@ -563,7 +565,6 @@
 <!--------------Experience--------------------------->
 <section class="experience">
   <div class="container">
-
     <div class="row">
 
       <div class="col-sm-6">
